--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,7 @@
 body{
-    background-color: red;
+    background-color: rgb(163, 163, 163);
     font-family: sans-serif;
+    box-sizing: border-box;
 
 
 }
@@ -96,4 +97,83 @@ footer{
     margin-left: 20px;
     
 
+}
+
+
+.slider{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(to left, #ba7453, #d1a894);
+    z-index: -1;
+}
+
+nav{
+    display: grid;
+    grid-template-columns: 10% 1fr 1fr 10% ;
+    min-height: 10vh;
+    color:white;
+    align-items: center;
+}
+.hamburger{
+    width: 40px;
+    height: 40px;
+    justify-self: end;
+}
+
+.photo-group{
+    height: 200px;
+    width: 200px;
+    margin-top: 100px;
+}
+#nosotros-title{
+    grid-column: 2/3;
+}
+
+section{
+    display: flex;
+    height: 80vh;
+    justify-content: center;
+    align-items: center;
+    background:linear-gradient(to right, rgb(247, 218, 4), rgb(0, 0, 0));
+
+}
+.hero{
+    height: 80%;
+    width: 100%;
+    position: relative;
+}
+
+.hero img{
+width: 100%;
+height: 100%;
+/*object-fit:cover*/
+}
+
+.headline{
+position: absolute;
+top:70%;
+left: 0%;
+font-size:80px  ;
+transform: translate(5%, -20%);
+color: yellow;
+text-shadow: 1px 1px 2px black, 0 0 25px gold, 0 0 5px yellow;
+z-index: 3;
+}
+
+.hero::after{
+    content: "";
+    background: black;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    opacity: 0.25;
+    top: 0;
+}
+a{
+    text-decoration: none;
+    color: black;
 }
